# stockRating

./: README.md  main.ipynb  pyproject.toml  ratingDetails.md  test.ipynb
src/: __init__.py  api.py  bull_screening.py  config.py  data_loader.py  features.py  models.py  scoring.py  utils.py
src/indicators/: __init__.py  base.py  context_providers.py  engine.py
src/indicators/bull/: __init__.py  delta_strength.py  funding_persistence.py  gamma_wall_breakout.py  institutional_dte.py  iv_hv_bull.py  iv_skew_bull.py  pc_ratio_bull.py  resonance_bull.py  rs_bull.py  volatility_state.py
src/indicators/gamma/: __init__.py  gamma_wall.py  gex_net.py  gex_regime.py  zero_gamma.py
src/indicators/option/: __init__.py  delta_direction.py  iv_hv.py  iv_skew.py  multi_strike.py  pc_ratio.py  short_dte.py  vol_oi.py
src/indicators/spot/: __init__.py  bollinger_squeeze.py  consecutive_volume.py  high_volume.py  relative_strength.py  strong_candle.py  vol_expansion.py
