[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-rating-system"
version = "0.1.0"
description = "Modular US stock rating system based on options and spot signals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stock Rating" }]
dependencies = [
  "yfinance>=0.2.58",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "akshare>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
